example horizontal control implementation

--- a/Example/Examples.csproj
+++ b/Example/Examples.csproj
@@ -13,7 +13,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="example.sunvox">
+    <None Update="ExampleProjects\jump_demo.sunvox">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="ExampleProjects\the_lick.sunvox">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
