--- a/SunSharp.Redistribution/SunSharp.Redistribution.csproj
+++ b/SunSharp.Redistribution/SunSharp.Redistribution.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -6,7 +6,7 @@
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <PackageId>Sotakebk.SunSharp.Redistribution</PackageId>
     <Title>SunSharp.Redistribution</Title>
-    <Version>0.0.0</Version>
+    <Version>0.0.1</Version>
     <Authors>Sotakebk</Authors>
     <Product>SunSharp.Redistribution</Product>
     <Description>SunVox Library redistribution for SunSharp.</Description>
