--- a/SunSharp.Redistribution/SunSharp.Redistribution.csproj
+++ b/SunSharp.Redistribution/SunSharp.Redistribution.csproj
@@ -6,7 +6,7 @@
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <PackageId>Sotakebk.SunSharp.Redistribution</PackageId>
     <Title>SunSharp.Redistribution</Title>
-    <Version>0.0.1</Version>
+    <Version>0.0.2</Version>
     <Authors>Sotakebk</Authors>
     <Product>SunSharp.Redistribution</Product>
     <Description>SunVox Library redistribution for SunSharp.</Description>
@@ -21,10 +21,51 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="..\SunSharp\license.txt">
-      <Pack>True</Pack>
-      <PackagePath>\</PackagePath>
-    </None>
+    <None Remove="lib\linux\lib_arm64\sunvox.so" />
+    <None Remove="lib\linux\lib_x86\sunvox.so" />
+    <None Remove="lib\linux\lib_x86_64\sunvox.so" />
+    <None Remove="lib\macos\lib_arm64\sunvox.dylib" />
+    <None Remove="lib\macos\lib_x86_64\sunvox.dylib" />
+    <None Remove="lib\windows\lib_x86\sunvox.dll" />
+    <None Remove="lib\windows\lib_x86_64\sunvox.dll" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="lib\linux\lib_arm64\sunvox.so">
+      <Pack>true</Pack>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <PackageCopyToOutput>true</PackageCopyToOutput>
+    </Content>
+    <Content Include="lib\linux\lib_x86\sunvox.so">
+      <Pack>true</Pack>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <PackageCopyToOutput>true</PackageCopyToOutput>
+    </Content>
+    <Content Include="lib\linux\lib_x86_64\sunvox.so">
+      <Pack>true</Pack>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <PackageCopyToOutput>true</PackageCopyToOutput>
+    </Content>
+    <Content Include="lib\macos\lib_arm64\sunvox.dylib">
+      <Pack>true</Pack>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <PackageCopyToOutput>true</PackageCopyToOutput>
+    </Content>
+    <Content Include="lib\macos\lib_x86_64\sunvox.dylib">
+      <Pack>true</Pack>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <PackageCopyToOutput>true</PackageCopyToOutput>
+    </Content>
+    <Content Include="lib\windows\lib_x86\sunvox.dll">
+      <Pack>true</Pack>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <PackageCopyToOutput>true</PackageCopyToOutput>
+    </Content>
+    <Content Include="lib\windows\lib_x86_64\sunvox.dll">
+      <Pack>true</Pack>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <PackageCopyToOutput>true</PackageCopyToOutput>
+    </Content>
   </ItemGroup>
 
   <ItemGroup>
@@ -32,24 +73,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="lib\linux\lib_x86\sunvox.so">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="lib\linux\lib_x86_64\sunvox.so">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="lib\macos\lib_arm64\sunvox.dylib">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="lib\macos\lib_x86_64\sunvox.dylib">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="lib\windows\lib_x86\sunvox.dll">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="lib\windows\lib_x86_64\sunvox.dll">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
     <None Update="license.txt">
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
