update readmes, licenses, versions

--- a/SunSharp.Redistribution/SunSharp.Redistribution.csproj
+++ b/SunSharp.Redistribution/SunSharp.Redistribution.csproj
@@ -18,6 +18,7 @@
     <AnalysisLevel>latest-recommended</AnalysisLevel>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <PackageLicenseFile>license.txt</PackageLicenseFile>
+    <IncludeSymbols>True</IncludeSymbols>
   </PropertyGroup>
 
   <ItemGroup>
