--- a/SunSharp.Redistribution/SunSharp.Redistribution.csproj
+++ b/SunSharp.Redistribution/SunSharp.Redistribution.csproj
@@ -10,7 +10,6 @@
     <Authors>Sotakebk</Authors>
     <Product>SunSharp.Redistribution</Product>
     <Description>SunVox Library redistribution for SunSharp.</Description>
-    <Copyright>Sotakebk; SunDog and Tremor Xiph.org Foundation copyright applies</Copyright>
     <PackageProjectUrl>https://github.com/Sotakebk/SunSharp</PackageProjectUrl>
     <RepositoryUrl>https://github.com/Sotakebk/SunSharp.git</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
@@ -19,6 +18,7 @@
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <PackageLicenseFile>license.txt</PackageLicenseFile>
     <IncludeSymbols>True</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
   </PropertyGroup>
 
   <ItemGroup>
