a whole lot of improvements and code coverage

--- a/SunSharp/SunSharp.csproj
+++ b/SunSharp/SunSharp.csproj
@@ -38,7 +38,7 @@
 
   <ItemGroup>
     <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
-      <_Parameter1>SunSharp.UnitTests</_Parameter1>
+      <_Parameter1>SunSharp.Tests</_Parameter1>
     </AssemblyAttribute>
   </ItemGroup>
 
