--- a/SunSharp.CodeGeneration.Tests/SunSharp.CodeGeneration.Tests.csproj
+++ b/SunSharp.CodeGeneration.Tests/SunSharp.CodeGeneration.Tests.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -16,7 +16,6 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.14.1" />
-    <PackageReference Include="NSubstitute" Version="5.3.0" />
     <PackageReference Include="NUnit" Version="4.4.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="5.1.0" />
     <PackageReference Include="NUnit.Analyzers" Version="4.10.0">
@@ -30,7 +29,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SunSharp\SunSharp.csproj" />
+    <ProjectReference Include="..\SunSharp.CodeGeneration\SunSharp.CodeGeneration.csproj" />
   </ItemGroup>
 
 </Project>
