Move documentation, make the friendly wrapper a struct with a shorter name; improve some API

--- a/SunSharp/SunSharp.csproj
+++ b/SunSharp/SunSharp.csproj
@@ -34,6 +34,10 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Generation|AnyCPU'">
     <DefineConstants>GENERATION</DefineConstants>
   </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DefineConstants>RELEASE</DefineConstants>
+  </PropertyGroup>
   
   <Target Name="PreparePackageReleaseNotesFromFile" BeforeTargets="GenerateNuspec">
     <ReadLinesFromFile File="./RELEASE-NOTES.txt">
