--- a/SunSharp.Redistribution/SunSharp.Redistribution.csproj
+++ b/SunSharp.Redistribution/SunSharp.Redistribution.csproj
@@ -6,7 +6,7 @@
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <PackageId>Sotakebk.SunSharp.Redistribution</PackageId>
     <Title>SunSharp.Redistribution</Title>
-    <Version>2.0.0-alpha0</Version>
+    <Version>2.0.0-dev0</Version>
     <AssemblyVersion>0.0.0.0</AssemblyVersion>
     <Authors>Sotakebk</Authors>
     <Product>SunSharp.Redistribution</Product>
@@ -40,15 +40,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Include="runtimes/win-x64/native/sunvox.dll" Pack="true" PackagePath="runtimes\win-x64\native" CopyToOutputDirectory="true">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="runtimes/win-x86-64/native/sunvox.dll" Pack="true" PackagePath="runtimes\win-x86-64\native" CopyToOutputDirectory="true">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-  </ItemGroup>
-
-  <ItemGroup>
     <None Update="LICENSE.txt">
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
@@ -61,6 +52,16 @@
       <PackagePath>\</PackagePath>
       <Pack>True</Pack>
     </None>
+    <Content Include="runtimes\linux-x64\native\sunvox.so" Pack="true" PackagePath="runtimes\linux-x64\native" CopyToOutputDirectory="PreserveNewest" />
+    <Content Include="runtimes\linux-x86\native\sunvox.so" Pack="true" PackagePath="runtimes\linux-x86\native" CopyToOutputDirectory="PreserveNewest" />
+    <Content Include="runtimes\linux-arm64\native\sunvox.so" Pack="true" PackagePath="runtimes\linux-arm64\native" CopyToOutputDirectory="PreserveNewest" />
+    <Content Include="runtimes\linux-arm\native\sunvox.so" Pack="true" PackagePath="runtimes\linux-arm\native" CopyToOutputDirectory="PreserveNewest" />
+
+    <Content Include="runtimes\osx-arm64\native\sunvox.dylib" Pack="true" PackagePath="runtimes\osx-arm64\native" CopyToOutputDirectory="PreserveNewest" />
+    <Content Include="runtimes\osx-x64\native\sunvox.dylib" Pack="true" PackagePath="runtimes\osx-x64\native" CopyToOutputDirectory="PreserveNewest" />
+
+    <Content Include="runtimes\win-x64\native\sunvox.dll" Pack="true" PackagePath="runtimes\win-x64\native" CopyToOutputDirectory="PreserveNewest" />
+    <Content Include="runtimes\win-x86\native\sunvox.dll" Pack="true" PackagePath="runtimes\win-x86\native" CopyToOutputDirectory="PreserveNewest" />
   </ItemGroup>
 
 </Project>
