--- a/SunSharp/SunSharp.csproj
+++ b/SunSharp/SunSharp.csproj
@@ -30,7 +30,13 @@
     <WarningsAsErrors>Nullable</WarningsAsErrors>
     <Configurations>Debug;Release;Generation</Configurations>
   </PropertyGroup>
-  
+
+  <ItemGroup>
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+      <_Parameter1>$(MSBuildProjectName).Tests</_Parameter1>
+    </AssemblyAttribute>
+  </ItemGroup>
+
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Generation|AnyCPU'">
     <DefineConstants>GENERATION</DefineConstants>
   </PropertyGroup>
@@ -54,7 +60,7 @@
     </AssemblyAttribute>
   </ItemGroup>
   
-  <ItemGroup>
+  <ItemGroup Condition="'$(Configuration)|$(Platform)'!='Release|AnyCPU'">
     <PackageReference Include="Roslynator.Analyzers" Version="4.15.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
