improvements in code, test coverage, audio integration tests

--- a/SunSharp.IntegrationTests/SunSharp.IntegrationTests.csproj
+++ b/SunSharp.IntegrationTests/SunSharp.IntegrationTests.csproj
@@ -36,4 +36,8 @@
     <ProjectReference Include="..\SunSharp\SunSharp.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="AudioTests\output\" />
+  </ItemGroup>
+
 </Project>
