--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,7 +1,14 @@
 name: Documentation
 
 on:
-  workflow_dispatch: {}
+  workflow_dispatch:
+    inputs:
+      publish:
+        description: 'Whether to publish the generated documentation to GitHub Pages.'
+        required: false
+        default: 'false'
+        type: boolean
+    
   push:
     branches: ["main"]
     paths:
@@ -55,14 +62,18 @@ jobs:
           retention-days: 1
 
       - name: Upload Pages artifact
-        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+        if: >
+          (github.event_name == 'push' && github.ref == 'refs/heads/main') 
+          || (github.event_name == 'workflow_dispatch' && github.event.inputs.publish == 'true')
         uses: actions/upload-pages-artifact@v3
         with:
           path: docs/out/site
           retention-days: 1
 
   deploy:
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+    if: >
+      (github.event_name == 'push' && github.ref == 'refs/heads/main')
+      || (github.event_name == 'workflow_dispatch' && github.event.inputs.publish == 'true')
     runs-on: ubuntu-latest
     needs: build
     environment:
