fix folder structure

--- a/examples/Example1/Example1.csproj
+++ b/examples/Example1/Example1.csproj
@@ -8,13 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Include="bass_and_melody.sunvox">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\..\..\src\SunSharp.Redistribution\SunSharp.Redistribution.csproj" />
+    <ProjectReference Include="..\..\src\SunSharp.Redistribution\SunSharp.Redistribution.csproj" />
   </ItemGroup>
 
 </Project>
