--- a/examples/Example2/Example2.csproj
+++ b/examples/Example2/Example2.csproj
@@ -8,7 +8,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\src\SunSharp.Redistribution\SunSharp.Redistribution.csproj" />
+    <Content Include="bass_and_melody.sunvox">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\SunSharp.Redistribution\SunSharp.Redistribution.csproj" />
   </ItemGroup>
 
 </Project>
