oops, examples use .slnx

--- a/.github/workflows/pr_validation.yml
+++ b/.github/workflows/pr_validation.yml
@@ -54,4 +54,4 @@ jobs:
         continue-on-error: true
 
       - name: Build examples
-        run: dotnet build examples/Examples.sln --configuration Release 
+        run: dotnet build examples/Examples.slnx --configuration Release 
