--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -69,7 +69,7 @@ jobs:
 
       - name: Upload Pages artifact
         if: >
-          (github.event_name == 'push' && github.ref == 'refs/heads/main') 
+          (github.event_name == 'push' && github.ref == 'refs/heads/master') 
           || (github.event_name == 'workflow_dispatch' && github.event.inputs.publish == 'true')
         uses: actions/upload-pages-artifact@v3
         with:
@@ -78,7 +78,7 @@ jobs:
 
   deploy:
     if: >
-      (github.event_name == 'push' && github.ref == 'refs/heads/main')
+      (github.event_name == 'push' && github.ref == 'refs/heads/master')
       || (github.event_name == 'workflow_dispatch' && github.event.inputs.publish == 'true')
     runs-on: ubuntu-latest
     needs: build
