--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,7 +48,7 @@ jobs:
         uses: actions/upload-artifact@v4
         if: always()
         with:
-          name: test-results-${{ matrix.os }}-${{ matrix.dotnet-version }}
+          name: test-results-${{ matrix.os }}
           path: "**/*.trx"
           retention-days: 1
 
